--- a/weapons.html
+++ b/weapons.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Enemies</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" >
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script >
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -27,7 +27,8 @@
             <td>{{weapon.name}}
             <td>{{weapon.trigger}}
             <td>{{weapon.damage}}
-        </td></tr>
+            </td>
+        </tr>
         {% end %}
     </table>
 </div>
