--- a/tournament.html
+++ b/tournament.html
@@ -13,6 +13,7 @@
     <table class='table table-responsive'>
         <tr>
             <th>Start block</th>
+            <th>Player</th>
             <th>Game replay</th>
             <th>Game seed</th>
             <th>Hero experience</th>
@@ -22,6 +23,7 @@
         <tr>
 
             <td>{{top[0]}}
+            <td>{{top[11]}}
 
                 {% if top[10] == 1 %}
             <td><a href='/replay/{{top[1]}}'>{{top[1]}}</a>
@@ -41,6 +43,7 @@
     <table class='table table-responsive'>
         <tr>
             <th>Start block</th>
+            <th>Player</th>
             <th>Game replay</th>
             <th>Game seed</th>
             <th>Hero experience</th>
@@ -50,6 +53,7 @@
         {% for line in all_finished %}
         <tr>
             <td>{{line[0]}}
+            <td>{{top[11]}}
             <td><a href='/replay/{{line[1]}}'>{{line[1]}}</a>
             <td>{{line[2]}}
             <td>{{line[3]}}
@@ -66,6 +70,7 @@
     <table class='table table-responsive'>
         <tr>
             <th>Start block</th>
+            <th>Player</th>
             <th>Game replay</th>
             <th>Game seed</th>
             <th>Hero experience</th>
@@ -75,6 +80,7 @@
         {% for line in all_unfinished %}
         <tr>
             <td>{{line[0]}}
+            <td>{{top[11]}}
             <td><a href='/unfinished/{{line[1]}}'>{{line[1]}}</a>
             <td>{{line[2]}}
             <td>{{line[3]}}
