--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 
         <tr>
             <td>{{top[0]}}
-            <td>{{line[11]}}
+            <td>{{top[13]}}
             <td><a href='/replay/{{top[1]}}'>{{top[1]}}</a>
             <td>{{top[2]}}
             <td>{{top[3]}}
@@ -56,7 +56,7 @@
         {% for line in all_finished %}
         <tr>
             <td>{{line[0]}}
-            <td>{{line[11]}}
+            <td>{{line[13]}}
             <td><a href='/replay/{{line[1]}}'>{{line[1]}}</a>
             <td>{{line[2]}}
             <td>{{line[3]}}
@@ -85,7 +85,7 @@
         {% for line in all_unfinished %}
         <tr>
             <td>{{line[0]}}
-            <td>{{line[11]}}
+            <td>{{line[13]}}
             <td><a href='/replay/{{line[1]}}'>{{line[1]}}</a>
             <td>{{line[2]}}
             <td>{{line[3]}}
