finished cosmetic changes

--- a/enemies.html
+++ b/enemies.html
@@ -17,7 +17,7 @@
     <h2>Normal</h2>
 </div>
 
-<div class="container">
+<div>
 
     <table class='table table-responsive'>
         <tr>
@@ -44,7 +44,7 @@
     <h2>Ragnarök Event</h2>
 </div>
 
-<div class="container">
+<div>
 
     <table class='table table-responsive'>
         <tr>
