--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-
+<div>
 <div class="jumbotron text-center">
     <h1>Welcome to autogame!</h1>
     <p>The world's first semi-automatic deterministic RPG</p>
@@ -15,7 +15,7 @@
 </div>
 
 
-<div class="container">
+<div>
     <h2>Top Player:</h2>
     <table class='table table-responsive'>
         <tr>
@@ -29,14 +29,13 @@
         </tr>
 
         <tr>
-            <td>{{top[0]}}
-            <td>{{top[12]}}
-            <td><a href='/replay/{{top[1]}}'>{{top[1]}}</a>
-            <td>{{top[2]}}
-            <td>{{top[3]}}
-            <td>{{top[4]}}
-            <td><a href='/league/{{top[5]}}'>{{top[5]}}</a>
-            </td>
+            <td>{{top[0]}}</td>
+            <td>{{top[12]}}</td>
+            <td><a href='/replay/{{top[1]}}'>{{top[1]}}</a></td>
+            <td>{{top[2]}}</td>
+            <td>{{top[3]}}</td>
+            <td>{{top[4]}}</td>
+            <td><a href='/league/{{top[5]}}'>{{top[5]}}</a></td>
         </tr>
     </table>
 
@@ -55,14 +54,14 @@
 
         {% for line in all_finished %}
         <tr>
-            <td>{{line[0]}}
-            <td>{{line[12]}}
-            <td><a href='/replay/{{line[1]}}'>{{line[1]}}</a>
-            <td>{{line[2]}}
-            <td>{{line[3]}}
-            <td>{{line[4]}}
-            <td><a href='/league/{{line[5]}}'>{{line[5]}}</a>
-            </td>
+            <td>{{line[0]}}</td>
+            <td>{{line[12]}}</td>
+            <td><a href='/replay/{{line[1]}}'>{{line[1]}}</a></td>
+            <td>{{line[2]}}</td>
+            <td>{{line[3]}}</td>
+            <td>{{line[4]}}</td>
+            <td><a href='/league/{{line[5]}}'>{{line[5]}}</a></td>
+
         </tr>
         {% end %}
 
@@ -95,4 +94,5 @@
         </tr>
         {% end %}
     </table>
+</div>
 </div>
