--- a/replay.html
+++ b/replay.html
@@ -7,7 +7,7 @@
     <h1>Game replay</h1>
 </div>
 
-<div class="container">
+<div>
 
     {% for key, value in text.items() %}
     <p>Step {{key}} : {{value}}</p>
